--- a/projects/templates/projects/detail.html
+++ b/projects/templates/projects/detail.html
@@ -33,31 +33,39 @@
         </header>
         <main>
             <div>
-                <h1>My Projects</h1>
-                <a href="{% url 'create_project' %}">Create a new project</a>
-                {% if project_list|length == 0 %}
-                    <p>You are not assigned to any projects</p>
-                {% else %}
+                <h1>{{ project_object.name }}</h1>
+                <p>{{ project_object.description }}</p>
+                <h2>Tasks</h2>
+                <p>
+                    <a href="{% url 'create_task' %}">Create a new task</a>
+                </p>
+                {% if project_object.tasks.all|length > 0 %}
                     <table>
                         <thead>
                             <tr>
                                 <th>Name</th>
-                                <th>Number of tasks</th>
+                                <th>Assignee</th>
+                                <th>Start date</th>
+                                <th>Due date</th>
+                                <th>Is completed</th>
                             </tr>
                         </thead>
                         <tbody>
-                            {% for project in project_list %}
+                            {% for task in project_object.tasks.all %}
                                 <tr>
-                                    <td>
-                                        <a href="{% url 'show_project' project.id %}">{{ project.name }}
-                                        </td>
-                                        <td>{{ project.tasks.all|length }}</td>
-                                    </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                    {% endif %}
-                </div>
-            </main>
-        </body>
-    </html>
+                                    <td>{{ task.name }}</td>
+                                    <td>{{ task.assignee }}</td>
+                                    <td>{{ task.start_date }}</td>
+                                    <td>{{ task.due_date }}</td>
+                                    <td>{{ task.is_completed|yesno:"yes,no" }}</td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                {% else %}
+                    <p>This project has no tasks</p>
+                {% endif %}
+            </div>
+        </main>
+    </body>
+</html>
